# AgentHandOff

./: .gitignore  LICENSE  README.md  agentreadme.md  debug_ast.py  debug_import.py  pyproject.toml  test_full_server.py  test_import_debug.py
.agent_handoff/history/: session_616952c6-2082-41fe-8951-0450f64b2e69.json  session_9863590b-3902-49e8-a0b5-9eef3757e164.json
docs/: 下一步开发计划.md  交接文档.md  快速查找指南.md
docs/ai-generated/: MVP功能与用户流程.md  功能增强报告-v0.2.0.md  功能增强报告-v0.3.0.md  技术架构与实现.md  架构重构报告.md
docs/design/: MCP服务器工具及规范.md  下一步开发计划.md  产品愿景与核心设计.md  开发准则.md  开发状态报告.md  开发路线图与成功指标.md  继续开发建议.md
docs/guides/: installation.md
src/agent_handoff/: __init__.py  __main__.py  cli.py  mcp_server_launcher.py  server.py  server_minimal.py  standalone_mcp_server.py
src/agent_handoff/tools/: __init__.py  utility_tools.py  workflow_tools.py
tests/: run_all_tests.py  test_basic.py  test_v0.3.0_enhancements.py
tests/integration/: test_e2e.py
tests/unit/: test_cli.py
tools/: mcp_diagnostics.py  setup_helper.py
