[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-handoff"
version = "0.1.0"
description = "项目级 AI 协作记忆与工作流系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agent-handoff = "agent_handoff.cli:cli"

[project.entry-points."console_scripts"]
agent-handoff-server = "agent_handoff.server:main"